# mcp-agent

./: .gitignore  Cargo.toml  README.md  README_CN.md
examples/simple/: Cargo.toml  mcp-agent.toml.template
examples/simple/src/: main.rs
examples/simple/src/tool/: calculator.rs  tool.rs
examples/temp/: Cargo.toml
examples/temp/src/: main.rs
examples/temp/src/common/: counter.rs
mcp-agent/: Cargo.toml
mcp-agent/src/: lib.rs
mcp-agent/src/agent/: agent.rs  config.rs  mod.rs
mcp-agent/src/llm/: llm.rs  message.rs  mod.rs  openai.rs
mcp-agent/src/mcp_server/: server.rs
