[workspace]
members = [ "examples/*","mcp-agent"]
resolver = "2"

[workspace.dependencies]
async-openai = "0.28.3"
axum = "0.8.4"
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server", "transport-io", "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
    "auth"] }

serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
