[workspace]
members = ["examples/*", "mcp-agent"]
resolver = "2"

[workspace.dependencies]
async-openai = "0.28.3"
axum = "0.8.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-sse-server", "transport-io", "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
    "auth"] }

serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["CeerDecy <CeerDecy@163.com>"]
description = "A Model Context Protocol (MCP) agent implementation in Rust"
license = "MIT"
repository = "https://github.com/CeerDecy/mcp-agent"
homepage = "https://github.com/CeerDecy/mcp-agent"
readme = "README.md"
keywords = ["mcp", "agent", "protocol", "llm", "openai"]
categories = ["api-bindings", "network-programming"]