[package]
name = "mcp-agent"
version = "0.1.0"
edition = "2024"
description = "A Model Context Protocol (MCP) agent implementation in Rust"
license = "MIT"
repository = "https://github.com/CeerDecy/mcp-agent"
readme = "README.md"
keywords = ["mcp", "agent", "protocol", "llm", "openai"]
categories = ["api-bindings", "network-programming"]

[dependencies]
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server", "transport-io", "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "transport-child-process",
    "auth"] }
tokio = { version = "1.45.1", features = ["full"] }
axum.workspace = true
async-openai.workspace = true
serde_json = "1.0.140"
async-trait = "0.1.88"
